attempt to switch from get to post reqs
